# G1-AfterTerm

./: CMakeLists.txt  README.md  start.bat
cfg/: cfg.txt  clog.txt  slog.txt
src/: client.c  client.h  debug.h  server.c  server.h
